fix terminal gap and make resizable

--- a/www/css/playground.css
+++ b/www/css/playground.css
@@ -28,12 +28,18 @@ html[data-theme='dark'] {
     --run-embeded-icon-color: #fff;
 }
 
+body.dragging {
+    -webkit-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+}
+
 .v-playground {
     position: relative;
     max-height: calc(100vh - 70px);
 
-    display: grid;
-    grid-template-rows: 60% 40%;
+    display: flex;
+    flex-direction: column;
 }
 
 .v-playground.playground__full-height {
@@ -51,6 +57,8 @@ html[data-theme='dark'] {
 .v-playground .playground__editor {
     position: relative;
     max-width: 100vw;
+    overflow: hidden;
+    flex: 1;
 }
 
 .CodeMirror {
@@ -79,19 +87,21 @@ html[data-theme='dark'] {
     padding-left: 5px;
 }
 
-.CodeMirror-linenumbers {
-}
-
 .CodeMirror-linenumber {
     font-size: 0.9em;
 }
 
 .playground__terminal {
-    height: 100%;
-    max-height: 350px;
+    height: 350px;
+    min-height: 150px;
+    max-height: 75vh;
 
     display: grid;
     grid-template-rows: 45px auto;
+}
+
+body.dragging .playground__terminal .header {
+    cursor: row-resize;
 }
 
 .playground__terminal .header {
